--- a/jc-publisher/index_.html
+++ b/jc-publisher/index_.html
@@ -49,7 +49,7 @@
     <hr />
     <!-- 링크버튼 -->
     <a href="https://naver.com">네이버</a><br />
-    <a href="https://naver.com" target="_blank">네이버 새창</a>
+    <a href="#here">이동</a>
 
     <!-- 기능버튼 -->
     <button>버튼</button>
@@ -62,5 +62,7 @@
 
     <!-- 내용 바꿈 -->
     <hr />
+
+    
   </body>
 </html>
