--- a/jc-publisher/back.html
+++ b/jc-publisher/back.html
@@ -12,10 +12,13 @@
 <body>
 
     <div id="style1">
+        
         <center><h1>등</h1></center>
-
-
     </div>
+    <button type="reset" onclick="alert('TEST')">
+        TEST </button> 
+
+
 
     <p>
         <u>등</u>은 승모근,광배근,견갑거근,대능형근,소능형근으로 구성되어 있으며, 등 근육이 약해지면 어깨가 처지고 , 기립근의 처짐으로 허리, 목 디스크의 증상이 올 수도 있습니다. 등 운동을 꾸준히 할 경우 우리몸의 어떤 변화가 생기는지 알아 보겠습니다.  
