--- a/jc-publisher/chest.html
+++ b/jc-publisher/chest.html
@@ -15,6 +15,8 @@
         <h1>가슴</h1>
         </center>    
     </div>
+    <button type="reset" onclick="alert('TEST')">
+        TEST </button> 
     <p>
         <u>가슴</u>은 대흉근으로 분류되며 상부,중앙,하부 3가지 부위로 나뉘어 집니다.가슴 운동은 팔꿈치나 어깨가 다치기 쉽기에 정확한 자세로 하는게 중요합니다. 가슴 운동을 꾸준히 할 경우 우리몸의 어떤 변화가 생기는지 알아 보겠습니다.
 
