--- a/lay/layout2.html
+++ b/lay/layout2.html
@@ -11,14 +11,14 @@
 <body>
     <div id="wrap">
         <div class="header">
-            <div class="h1">1</div>
-            <div class="h2">1</div>
+            <div class="gnb_01"></div>
+            <div class="gnb_02">1</div>
         </div>
-        <div class="body">
+        <div class="container">
             <div class="article1">1</div>
             
         </div>
-        <div class="foot">1</div>
+        <div class="foot"></div>
     </div>
 </body>
 </html>
