--- a/lay/layout1.html
+++ b/lay/layout1.html
@@ -13,7 +13,7 @@
         <div class="header">
             <h1></h1>
         </div>
-        <div class="body">
+        <div class="container">
             <div class="article1"></div>
             <div class="article2"></div>
         </div>
